# ZooLife

./: .gitignore  Aliment.cpp  Aliment.h  CMakeLists.txt  Ianimal.cpp  Ianimal.h  README.md  main.cpp
Aliments/: Aliment.cpp  Aliment.h  Graines.cpp  Graines.h  Viande.cpp  Viande.h
Animaux/: Aigle.cpp  Aigle.h  Coq.cpp  Coq.h  IAnimal.cpp  IAnimal.h  Poule.cpp  Poule.h  Tigre.cpp  Tigre.h
Budget/: Budget.cpp  Budget.h
Functions/: functions.cpp  functions.h
Habitats/: Habitat.cpp  Habitat.h
Vendeur/: Vendeur.cpp  Vendeur.h
Zoo/: Zoo.cpp  Zoo.h
